# design_patterns

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml  windows.yml
builder/: CMakeLists.txt
builder/include/: HtmlBuilder.h  HtmlElement.h  YamlBuilder.h  YamlElement.h
builder/src/: HtmlBuilder.cpp  HtmlElement.cpp  YamlBuilder.cpp  YamlElement.cpp  builder.cpp  groovy_builder.cpp
builder/test/: CMakeLists.txt  test_builder.cpp  test_yaml_builder.cpp
cmake/: fetch_dependencies.cmake
specification_pattern/: CMakeLists.txt  specification_pattern.cpp
specification_pattern/include/: AndSpecification.h  AssigneeSpecification.h  Filter.h  Issue.h  IssueFilter.h  PriorityNotSpecification.h  PrioritySpecification.h  ReporterSpecification.h  Specification.h
specification_pattern/test/: CMakeLists.txt  test_specification_pattern.cpp
